--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,22 +73,27 @@ jobs:
       - name: Deploy to EC2
         run: |
           ssh -i ec2-key.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << EOF
-            # Stop and remove the current container if running
-            CONTAINER_ID=\$(sudo docker ps -q --filter "name=capstone_project")
-            if [ -n "\$CONTAINER_ID" ]; then
-              sudo docker stop \$CONTAINER_ID
-              sudo docker rm \$CONTAINER_ID
-            fi
+          # Stop and remove the current container if running
+          CONTAINER_ID=\$(sudo docker ps -aq --filter "name=capstone_project")
+          if [ -n "\$CONTAINER_ID" ]; then
+            echo "Stopping and removing existing container..."
+            sudo docker stop \$CONTAINER_ID
+            sudo docker rm \$CONTAINER_ID
+          fi
 
-            # Remove dangling images to free up space
-            sudo docker images -f "dangling=true" -q | xargs -r sudo docker rmi
+          # Remove dangling images to free up space
+          echo "Removing dangling images..."
+          sudo docker images -f "dangling=true" -q | xargs -r sudo docker rmi
 
-            # Pull the latest image from Docker Hub
-            sudo docker pull $IMAGE_URI
+          # Pull the latest image from Docker Hub
+          echo "Pulling latest image..."
+          sudo docker pull $IMAGE_URI
 
-            # Run the new container
-            sudo docker run -d --name capstone_project -p 8080:8080 $IMAGE_URI
+          # Run the new container
+          echo "Starting new container..."
+          sudo docker run -d --name capstone_project -p 8080:8080 $IMAGE_URI
           EOF
+
 
       # Clean up PEM file
       - name: Clean up PEM File
