--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,11 @@ on:
       - development
 
 jobs:
+  # Job untuk menjalankan pengujian
   test:
     runs-on: ubuntu-latest
     steps:
-      # Checkout the code
+      # Checkout kode dari branch
       - name: Checkout the code
         uses: actions/checkout@v2
 
@@ -19,23 +20,24 @@ jobs:
         with:
           go-version: '1.21'
 
-      # Run tests
+      # Menjalankan tes unit
       - name: Run Tests
         run: go test -v ./...
 
+  # Job untuk build dan push Docker image
   build-and-push-docker:
     runs-on: ubuntu-latest
     needs: test
     steps:
-      # Checkout the code
+      # Checkout kode dari branch
       - name: Checkout the code
         uses: actions/checkout@v2
 
-      # Create .env file from secret
+      # Membuat file .env dari secret
       - name: Create .env file
         run: echo "${{ secrets.ENV }}" > .env
 
-      # Login to Docker Hub
+      # Login ke Docker Hub
       - name: Docker Hub Login
         uses: docker/login-action@v2
         with:
@@ -46,10 +48,11 @@ jobs:
       - name: Build Docker Image
         run: docker build -t ${{ secrets.DOCKER_USER }}/capstone_project:latest .
 
-      # Push Docker image to Docker Hub
+      # Push Docker image ke Docker Hub
       - name: Push Docker Image
         run: docker push ${{ secrets.DOCKER_USER }}/capstone_project:latest
 
+  # Job untuk deployment ke EC2
   deploy-to-ec2:
     needs: build-and-push-docker
     runs-on: ubuntu-latest
@@ -59,21 +62,25 @@ jobs:
       EC2_USER: ${{ secrets.EC2_USER }}
 
     steps:
-      # Checkout the code
+      # Checkout kode dari branch
       - name: Checkout the Code
         uses: actions/checkout@v2
 
-      # Create PEM file from secret
+      # Membuat file PEM dari secret
       - name: Create PEM File
         run: |
           echo "${{ secrets.EC2_PEM }}" > ec2-key.pem
           chmod 600 ec2-key.pem
 
-      # Deploy to EC2
+      # Deploy ke EC2
       - name: Deploy to EC2
         run: |
           ssh -i ec2-key.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << EOF
-          # Stop and remove the current container if running
+          # Membuat direktori untuk volume jika belum ada
+          sudo mkdir -p /var/uploads
+          sudo chmod -R 777 /var/uploads
+
+          # Stop dan hapus container yang sedang berjalan
           CONTAINER_ID=\$(sudo docker ps -aq --filter "name=capstone_project")
           if [ -n "\$CONTAINER_ID" ]; then
             echo "Stopping and removing existing container..."
@@ -81,20 +88,19 @@ jobs:
             sudo docker rm \$CONTAINER_ID
           fi
 
-          # Remove dangling images to free up space
+          # Membersihkan dangling images
           echo "Removing dangling images..."
           sudo docker images -f "dangling=true" -q | xargs -r sudo docker rmi
 
-          # Pull the latest image from Docker Hub
+          # Pull Docker image terbaru dari Docker Hub
           echo "Pulling latest image..."
           sudo docker pull $IMAGE_URI
 
-          # Run the new container
+          # Menjalankan container dengan volume
           echo "Starting new container..."
-          sudo docker run -d --name capstone_project -p 8000:8000 $IMAGE_URI
+          sudo docker run -d --name capstone_project -p 8000:8000 -v /var/uploads:/app/uploads $IMAGE_URI
           EOF
 
-
-      # Clean up PEM file
+      # Membersihkan file PEM
       - name: Clean up PEM File
         run: rm -f ec2-key.pem
