--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,11 +6,10 @@ on:
       - development
 
 jobs:
-  # Job untuk menjalankan pengujian
   test:
     runs-on: ubuntu-latest
     steps:
-      # Checkout kode dari branch
+      # Checkout the code
       - name: Checkout the code
         uses: actions/checkout@v2
 
@@ -20,24 +19,23 @@ jobs:
         with:
           go-version: '1.21'
 
-      # Menjalankan tes unit
+      # Run tests
       - name: Run Tests
         run: go test -v ./...
 
-  # Job untuk build dan push Docker image
   build-and-push-docker:
     runs-on: ubuntu-latest
     needs: test
     steps:
-      # Checkout kode dari branch
+      # Checkout the code
       - name: Checkout the code
         uses: actions/checkout@v2
 
-      # Membuat file .env dari secret
+      # Create .env file from secret
       - name: Create .env file
         run: echo "${{ secrets.ENV }}" > .env
 
-      # Login ke Docker Hub
+      # Login to Docker Hub
       - name: Docker Hub Login
         uses: docker/login-action@v2
         with:
@@ -48,11 +46,10 @@ jobs:
       - name: Build Docker Image
         run: docker build -t ${{ secrets.DOCKER_USER }}/capstone_project:latest .
 
-      # Push Docker image ke Docker Hub
+      # Push Docker image to Docker Hub
       - name: Push Docker Image
         run: docker push ${{ secrets.DOCKER_USER }}/capstone_project:latest
 
-  # Job untuk deployment ke EC2
   deploy-to-ec2:
     needs: build-and-push-docker
     runs-on: ubuntu-latest
@@ -62,25 +59,21 @@ jobs:
       EC2_USER: ${{ secrets.EC2_USER }}
 
     steps:
-      # Checkout kode dari branch
+      # Checkout the code
       - name: Checkout the Code
         uses: actions/checkout@v2
 
-      # Membuat file PEM dari secret
+      # Create PEM file from secret
       - name: Create PEM File
         run: |
           echo "${{ secrets.EC2_PEM }}" > ec2-key.pem
           chmod 600 ec2-key.pem
 
-      # Deploy ke EC2
+      # Deploy to EC2
       - name: Deploy to EC2
         run: |
           ssh -i ec2-key.pem -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << EOF
-          # Membuat direktori untuk volume jika belum ada
-          sudo mkdir -p /var/uploads
-          sudo chmod -R 777 /var/uploads
-
-          # Stop dan hapus container yang sedang berjalan
+          # Stop and remove the current container if running
           CONTAINER_ID=\$(sudo docker ps -aq --filter "name=capstone_project")
           if [ -n "\$CONTAINER_ID" ]; then
             echo "Stopping and removing existing container..."
@@ -88,19 +81,20 @@ jobs:
             sudo docker rm \$CONTAINER_ID
           fi
 
-          # Membersihkan dangling images
+          # Remove dangling images to free up space
           echo "Removing dangling images..."
           sudo docker images -f "dangling=true" -q | xargs -r sudo docker rmi
 
-          # Pull Docker image terbaru dari Docker Hub
+          # Pull the latest image from Docker Hub
           echo "Pulling latest image..."
           sudo docker pull $IMAGE_URI
 
-          # Menjalankan container dengan volume
+          # Run the new container
           echo "Starting new container..."
-          sudo docker run -d --name capstone_project -p 8000:8000 -v /var/uploads:/app/uploads $IMAGE_URI
+          sudo docker run -d --name capstone_project -p 8000:8000 $IMAGE_URI
           EOF
 
-      # Membersihkan file PEM
+
+      # Clean up PEM file
       - name: Clean up PEM File
         run: rm -f ec2-key.pem
